<resources>
    <string name="app_name">KodeCamp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome_to_kodecamp">Welcome! to KodeCamp</string>
    <string name="signin">SignIn</string>
    <string name="enter_your_details_below_to_continue">Enter your details below to continue</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup_here">SignUp here</string>
    <string name="signup">SignUp</string>
    <string name="enter_your_details_to_create_an_account">Enter your details to create an account</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_your_track">Enter your track</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signin_here">SignIn here</string>
    <string name="hello_abby">Hello %s</string>
    <string name="android_dev">Android Dev</string>
    <string name="track_android_dev">Track: Android Dev</string>
    <string name="tracks">Tracks</string>
    <string name="see_topics">See topics</string>
    <string name="ui_ux">UI/UX</string>
    <string name="web_dev">Web Dev</string>
    <string name="python">Python</string>
    <string name="php">PHP</string>
    <string name="node_js">Node JS</string>
    <string name="available_trainings">Available Trainings</string>
    <string name="sign_out">Sign Out</string>
    <string name="choose_from_one_of_our_trainings_and_learn_at_your_convenience">Choose from one of our trainings and learn at your convenience.</string>
    <string name="topic_1">Introduction to Kotlin and Android Studio</string>
    <string name="topic_2">Classes and Objects in kotlin</string>
    <string name="topic_3">Classes an Inheritance in Kotlin</string>
    <string name="topic_4">Conditional Statements</string>
    <string name="topic_5">Material Design</string>
    <string name="topic_6">Lists in Kotlin</string>
    <string name="topic_7">Recycler View in kotlin</string>
    <string name="topic_8">Collections in Kotlin</string>
    <string name="topic_9">Activities and Intents</string>
    <string name="topic_10">Activity Life Cycle in Kotlin</string>
    <string name="topic_11">Understanding Fragments in Kotlin</string>
    <string name="topic_12">View Model</string>
    <string name="topic_13">Understanding Live Data in Android </string>
    <string name="topic_14">Shared View Model</string>
    <string name="topics_in_android">Topics in android</string>
    <string name="share">Share</string>
    <string name="topic_details_from_the_internet">Kotlin is a statistically typed</string>
    <string name="topic_title">Topic Title</string>

    <string name="topic_details">Kotlin is a statistically typed, general purpose programming language developed by JetBrains,
    that has built world-class IDEs like IntelliJ IDEA, PhpStorm, Appcode, etc. it was first introduced by JetBrains in 2011 and a new language
    for the JVM. Kotlin is object oriented language, and a better language than Java, but can still be interoperable with Java Code </string>

    <string name="key_features"> Key Features of Kotlin</string>
    <string name="key1">1. Statically typed</string>
    <string name="key1_desc">Statically typed is a programming language characteristic that means the type of every variable and
        expression is known at compile time. Although it is statically typed language, it does not require you to explicitly specify the type of
        every variable you declare.</string>
    <string name="key2">2. Data Classes</string>
    <string name="key2_desc">In Kotlin, there are Data Classes which lead to auto-generation of boilerplate like equals, hashCode, toString,
        getters/setters and much more.</string>
    <string name="key3">3.Concise</string>
    <string name="key3_desc">It drastically reduces the extra code written in other object-oriented programming languages.</string>
    <string name="key4">4. Safe</string>
    <string name="key4_desc">It provides the safety from most annoying and irritating NullPointerExceptions by supporting nullability as part
        of its system. Every variable in Kotlin is non-null by default.</string>
    <string name="key5">5. Interoperable with Java</string>
    <string name="key5_desc">Kotlin runs on Java Virtual Machine(JVM) so it is totally interoperable with java. We can easily access use java code
        from kotlin and kotlin code from java.</string>
    <string name="key6">6. Functional and Object Oriented</string>
    <string name="key6_desc">Kotlin has rich set of many useful methods which includes higher-order functions, lambda expressions,
        operator overloading, lazy evaluation, operator overloading and much more. Higher order function is a function which accepts function as a parameter or returns a function or can do both.</string>
    <string name="key7">7. Smart Cast</string>
    <string name="key7_desc">It explicitly typecasts the immutable values and inserts the value in its safe cast automatically.
If we try to access a nullable type of String ( String? = “BYE”) without safe cast it will generate a compile error.</string>
    <string name="key8">8. Compilation time</string>
    <string name="key8_desc">It has higher performance and fast compilation time.</string>
    <string name="key9">9. Tool Friendly</string>
    <string name="key9_desc">It has excellent tooling support. Any of the Java IDEs – IntelliJ IDEA, Eclipse and Android Studio can be used for Kotlin.
        We can also be run Kotlin program from command line.</string>



    <string name="example_of_kotlin">Example of Kotlin</string>

    <string name="advantages_of_kotlin">Advantages of Kotlin</string>
    <string name="advantage1">1. Easy to learn – Basic is almost similar to java.If anybody worked in java then easily understand in no time.</string>
    <string name="advantage2">2. Kotlin is multi-platform – Kotlin is supported by all IDEs of java so you can write your program and execute them on any
        machine which supports JVM.</string>
    <string name="advantage3">3. It’s much safer than Java.</string>
    <string name="advantage4">4. It allows using the Java frameworks and libraries in your new Kotlin projects by using advanced
        frameworks without any need to change the whole project in Java.</string>
    <string name="advantage5">5. Kotlin programming language, including the compiler, libraries and all the tooling is completely free and
        open source and available on github. Here is the link for Github https://github.com/JetBrains/kotlin</string>

    <string-array name="advantages">
        <item name = "advantage">1. Easy to learn – Basic is almost similar to java.If anybody worked in java then easily understand in no time.</item>
        <item name = "advantage">2. Kotlin is multi-platform – Kotlin is supported by all IDEs of java so you can write your program and execute them on any
        machine which supports JVM.</item>
        <item name = "advantage">3. It’s much safer than Java.</item>
        <item name = "advantage">4. It allows using the Java frameworks and libraries in your new Kotlin projects by using advanced
        frameworks without any need to change the whole project in Java.</item>
        <item name = "advantage">5. Kotlin programming language, including the compiler, libraries and all the tooling is completely free and
        open source and available on github. Here is the link for Github https://github.com/JetBrains/kotlin</item>
    </string-array>


    <string name="applications_of_kotlin">Applications of Kotlin</string>
    <string name="application1">1. You can use Kotlin to build android applications.</string>
    <string name="application2">2. Kotlin can also compile to JavaScript,  making it available for frontend</string>
    <string name="application3">3. It is also designed to work well for web development and server-side development.</string>
    <string-array name="applications">
        <item name = "application1">1. You can use Kotlin to build android applications.</item>
        <item name = "application1">2. Kotlin can also compile to JavaScript,  making it available for frontend</item>
        <item name = "application1">3. It is also designed to work well for web development and server-side development.</item>

    </string-array>


    <string name="share_topic_with_others">Share topic with others</string>

</resources>