<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="signIn"
            type="com.example.kodecamp.fragments.SignIn" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".fragments.SignIn"
            android:orientation="vertical"
            android:background="@drawable/splashscreenbkground"
            android:backgroundTint="@color/black"
            tools:ignore="ScrollViewSize">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_kodecamp"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:fontFamily="@font/latoblack"
                android:layout_marginTop="32dp"
                android:layout_gravity="center_horizontal" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/kodecampblack"
                android:layout_gravity="center_horizontal" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/whitelayout"
                android:backgroundTint="@color/white"
                android:elevation="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signin"
                    android:fontFamily="@font/latobold"
                    android:textSize="24sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/textcolor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_your_details_below_to_continue"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/latoregular"
                    android:textColor="@color/textcolor"
                    android:textSize="12sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signInTxtlayout"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/inputlayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signInEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/enter_email_address"
                        android:textColorHint="@color/hintcolor"
                        android:fontFamily="@font/latolight"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signInPassWordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:endIconMode="password_toggle"
                    android:background="@drawable/inputlayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/enter_password"
                        android:textColorHint="@color/hintcolor"
                        android:fontFamily="@font/latolight" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/latoregular"
                    android:textColor="@color/textcolor" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signInBtn"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/btnlayout"
                    android:fontFamily="@font/latobold"
                    android:onClick="@{() -> signIn.goToTrainingScreen()}"
                    android:text="@string/signin"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_an_account"
                        android:fontFamily="@font/latoregular"
                        android:textSize="18sp"
                        android:textColor="@color/textcolor"
                        android:layout_marginTop="24dp"
                        android:layout_marginStart="60dp" />

                    <TextView
                        android:id="@+id/signUpHereTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signup_here"
                        android:onClick="@{() -> signIn.goToSignUp()}"
                        android:fontFamily="@font/latobold"
                        android:textSize="18sp"
                        android:textColor="@color/primarycolor"
                        android:layout_marginTop="24dp"
                        android:layout_marginStart="5dp" />

                </LinearLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </ScrollView>
</layout>
